# Taiji-ATAC-seq

./: Taiji-ATAC-seq.cabal  stack.yaml
app/: Main.hs
src/Taiji/Pipeline/: ATACSeq.hs
src/Taiji/Pipeline/ATACSeq/: Bulk.hs  Config.hs  Core.hs  Functions.hs  Motif.hs  SingleCell.hs  Types.hs
src/Taiji/Pipeline/ATACSeq/Core/: Functions.hs
src/Taiji/Pipeline/ATACSeq/Functions/: Core.hs  GeneQuant.hs  Motif.hs  QC.hs
src/Taiji/Pipeline/ATACSeq/Functions/Core/: Extra.hs
src/Taiji/Pipeline/ATACSeq/Motif/: Functions.hs
