name:                Taiji-ATAC-seq
version:             0.1.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/Taiji-ATAC-seq#readme
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag exe
  Description: Build executable
  Default:     False

library
  ghc-options:         -Wall
                       -fno-warn-partial-type-signatures
                       -fno-warn-unticked-promoted-constructors
  hs-source-dirs:      src

  exposed-modules:     Taiji.Pipeline.ATACSeq
                       Taiji.Pipeline.ATACSeq.Core
                       Taiji.Pipeline.ATACSeq.Core.Functions
                       Taiji.Pipeline.ATACSeq.Motif
                       Taiji.Pipeline.ATACSeq.Motif.Functions
                       Taiji.Pipeline.ATACSeq.Config

  build-depends:       base >= 4.7 && < 5
                     , bio-pipelines
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.5.0
                     , conduit-extra
                     , containers
                     , conduit
                     , data-default
                     , data-ordlist
                     , filepath
                     , lens
                     , mtl
                     , SciFlow >=0.6.2
                     , text
                     , temporary
                     , transformers-base
                     , singletons
                     , split
                     , shelly
                     , statistics
  default-language:    Haskell2010

executable taiji-atac-seq
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded -Wall

  build-depends:       base >=4 && <5
                     , aeson
                     , data-default
                     , bio-pipelines
                     , lens
                     , SciFlow >=0.6.2
                     , Taiji-ATAC-seq

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-ATAC-seq
