name:                Taiji-ATAC-seq
version:             0.2.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017-2019 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag exe
  Description: Build executable
  Default:     False

library
  ghc-options:         -Wall
                       -fno-warn-partial-type-signatures
                       -fno-warn-unticked-promoted-constructors
  hs-source-dirs:      src

  exposed-modules:     Taiji.Pipeline.ATACSeq
                       Taiji.Pipeline.ATACSeq.Functions
                       Taiji.Pipeline.ATACSeq.Functions.GeneQuant
                       Taiji.Pipeline.ATACSeq.Functions.Core
                       Taiji.Pipeline.ATACSeq.Functions.QC
                       Taiji.Pipeline.ATACSeq.Functions.Motif
                       Taiji.Pipeline.ATACSeq.Types

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bio-pipelines
                     , bytestring
                     , binary
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.8.0
                     , case-insensitive
                     , conduit-extra
                     , containers
                     , conduit
                     , data-default
                     , data-ordlist
                     , dense-linear-algebra
                     , double-conversion
                     , filepath
                     , hvega
                     , HsHTSLib >= 1.9.2.1
                     , mtl
                     , SciFlow >= 0.7.1
                     , text
                     , temporary
                     , transformers-base
                     , singletons >= 2.5
                     , split
                     , shelly
                     , statistics >= 0.15.0.0
                     , vector
                     , unordered-containers
                     , Taiji-utils
  default-language:    Haskell2010

executable taiji-atac-seq
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded -Wall

  build-depends:       base >=4 && <5
                     , aeson
                     , data-default
                     , bio-pipelines
                     , binary
                     , lens
                     , SciFlow >=0.7.1
                     , SciFlow-drmaa 
                     , SciFlow-app
                     , Taiji-ATAC-seq

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-ATAC-seq
